# Babel

./: CMakeLists.txt  README.md  conanfile.txt
UML_doc/client/: dot.dot  dotout.dot  output.dia  tags
UML_doc/server/: dot.dot  dotout.dot  output.dia  tags
client/include/: AddUserButton.hpp  Caller.hpp  ClientServer.hpp  Connection.hpp  CreateWindow.hpp  CustomWidget.hpp  ListeUsers.hpp  Network.hpp  QuitButton.hpp  audio.hpp  clientconnect.hpp  serverconnect.hpp
client/src/: AddUserButton.cpp  Caller.cpp  ClientServer.cpp  Connection.cpp  CreateWindow.cpp  CustomWidget.cpp  ListeUsers.cpp  Network.cpp  QuitButton.cpp  audio.cpp  clientconnect.cpp  clientconnect.cpp~  main.cpp  serverconnect.cpp  serverconnect.cpp~
server/include/: codes_command.hpp  connection.hpp  connection_manager.hpp  repertory.hpp  request.hpp  server.hpp  user.hpp
server/src/: codes_command.cpp  connection.cpp  connection_manager.cpp  main.cpp  repertory.cpp  request.cpp  server.cpp  user.cpp
